# llm-research

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  pyproject.toml
.devcontainer/: Dockerfile  README.md  devcontainer-lock.json  devcontainer.json  post-create.sh
configs/: README.md
configs/eval/: canary.yaml  full.yaml  full_local.yaml  medical.yaml
configs/sweep/: exp0.yaml
configs/train/: base.yaml  domain_general.yaml  domain_general_synthetic.yaml  domain_only.yaml  domain_synthetic.yaml  synthetic_only.yaml
configs/validate/: default.yaml
data/: README.md
eval_tasks/: README.md
eval_tasks/ifbench/: README.md  ifbench.yaml  instructions.py  utils.py
eval_tasks/supergpqa/: supergpqa.yaml  utils.py
examples/: 01_vllm_offline.ipynb  02_vllm_serve_openai.ipynb  05_train_lora_peft_trl.ipynb
experiments/: README.md
experiments/exp0_forgetting_signal/: README.md  sweep.py
notebooks/: README.md
notebooks/examples/: 00_datasets_and_tokenizers.ipynb  03_hf_transformers_generate.ipynb  04_vllm_custom_logits_processor.ipynb  06_train_fft_trl.ipynb  07_benchmark_lm_eval.ipynb  08_diversity_metrics.ipynb  README.md
research/: README.md  dynamic-temperature-generative-replay.md  exp-mixing-unit.md  exp0-forgetting-signal.md  exp1-forgetting-replay.md
runs/: README.md
scripts/: README.md  coherence_check.py  diversity.py  evaluate.py  forgetting_report.py  generate.py  sweep_exp0.py  train.py  validate.py
src/llm_core/: README.md  evaluation.py  models.py  sweep.py
src/llm_core/generation/: README.md  generator.py  served.py
src/llm_core/metrics/: diversity.py
src/llm_core/serving/: __init__.py  server.py
src/llm_core/training/: README.md  data.py  sft.py
src/llm_replay/: README.md  corpus.py  forgetting.py
src/llm_replay/generation/: README.md  generator.py  prompts.py  temperature.py  validation.py
src/llm_replay/metrics/: diversity.py
src/llm_replay/training/: README.md  data.py  sft.py
tests/: README.md  test_data.py  test_diversity.py  test_evaluation.py  test_forgetting.py  test_models.py  test_prompts.py  test_served_generation.py  test_serving.py  test_sft.py  test_sweep.py  test_sweep_exp0.py  test_temperature.py  test_train_overrides.py  test_validation.py
