[project]
name = "llm-research"
version = "0.0.0"
description = "LLM research workspace (vLLM + HuggingFace stack)"
requires-python = ">=3.12,<3.13"

# ABI-critical packages are == pinned. The convenience tools at the bottom are
# left unconstrained on purpose — uv.lock freezes their exact versions, so the
# whole environment is still fully reproducible from the committed lockfile.
dependencies = [
    # --- Core inference / runtime (do NOT float these) ---------------------
    "vllm==0.23.0",          # latest stable; cu13 default targets Blackwell sm_120 (matches torch cu130)
    "torch==2.11.0",         # hard == pin coming from vLLM itself
    "torchvision==0.26.0",   # torch 2.11.0 companion (multimodal / vision models)
    # "torchaudio==2.11.0",  # uncomment only if you work with audio models

    # --- HuggingFace stack -------------------------------------------------
    # tokenizers is intentionally NOT pinned here: transformers 5.12.1 constrains
    # it to >=0.22.0,<=0.23.0, and 0.23.0 was never published — uv resolves to the
    # latest in-range 0.22.x and uv.lock freezes the exact version.
    "transformers==5.12.1",
    "accelerate==1.14.0",
    "datasets==5.0.0",
    "huggingface-hub[cli]==1.19.0",
    "safetensors==0.8.0",
    "sentencepiece==0.2.1",
    "hf-transfer==0.1.9",          # set HF_HUB_ENABLE_HF_TRANSFER=1 to use
    "peft==0.19.1",
    "bitsandbytes==0.49.2",
    "einops==0.8.2",
    "trl>=1.6.0",                  # SFTTrainer: LoRA SFT over the corpus mix (training/sft.py)

    # --- Research / notebook convenience (versions frozen by uv.lock) ------
    "jupyterlab",
    "ipykernel",
    "ipywidgets",
    "numpy",
    "pandas",
    "matplotlib",
    "scipy",
    "scikit-learn",
    "tqdm",
    "rich",
    "wandb",
    "openai",
    "ipython",
    "ruff",

    # --- Evaluation harness (capability/regression battery) ----------------
    # EleutherAI lm-evaluation-harness: still the 2026 gold-standard harness for
    # reproducible capability evals (MMLU-Pro, GPQA, IFEval, MATH, BBH, MuSR via
    # the built-in `leaderboard` task group). Has first-class vLLM backend support.
    # Extras `ifeval`/`math` pull the verifiable-task deps (nltk/langdetect,
    # sympy/antlr4); `api` pulls the OpenAI-compatible client deps (tenacity,
    # tqdm-multiprocess) used by the `local-completions` backend — i.e. evaluating a
    # model served by `vllm serve` (the Exp-0 sweep's shared-engine Stage B). Code/agentic
    # benches (SWE-bench, LiveCodeBench) use their own separate harnesses — not covered here.
    "lm-eval[ifeval,math,api]",
    # Verifier deps for the vendored IFBench task (eval_tasks/ifbench/): emoji
    # detection + syllable counting. Pure-Python; do not affect the torch/vllm ABI.
    "emoji",
    "syllapy",

    # --- Distribution/diversity metrics (collapse axis) --------------------
    # Corpus-vs-corpus collapse detectors (real/gen-0 vs synthetic): MAUVE,
    # generative precision/recall + density/coverage, Vendi diversity. Embeddings
    # via sentence-transformers. Wrappers over the existing torch/transformers; the
    # lock is pin-checked to keep torch/vllm/transformers fixed.
    "mauve-text",
    "vendi-score",
    "prdc",
    "sentence-transformers",

    # --- Test suite (CPU-only, no network) ---------------------------------
    # Unpinned on purpose (frozen by uv.lock); pure-Python, no torch/vllm ABI impact.
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_core", "src/llm_replay"]

# --- PyTorch CUDA 13.0 index (must match torch 2.11.0 / vLLM's CUDA major) ---
# `explicit = true` means this index is used ONLY for the packages mapped in
# [tool.uv.sources] below — never for generic deps (avoids dependency confusion).
[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu130", marker = "sys_platform == 'linux'" }]
torchvision = [{ index = "pytorch-cu130", marker = "sys_platform == 'linux'" }]
# torchaudio = [{ index = "pytorch-cu130", marker = "sys_platform == 'linux'" }]
